--- a/landingPageAssets/css/style.css
+++ b/landingPageAssets/css/style.css
@@ -1559,7 +1559,7 @@ section {
 .contact .info-box {
     color: #444444;
     text-align: center;
-    box-shadow: 0 0 30px rgba(214, 215, 216, 0.3);
+    /* box-shadow: 0 0 30px rgba(214, 215, 216, 0.3); */
     padding: 20px 0 30px 0;
 }
 
@@ -1583,10 +1583,11 @@ section {
     line-height: 24px;
     font-size: 14px;
     margin-bottom: 0;
+    color: #bfbfbf;
 }
 
 .contact .php-email-form {
-    box-shadow: 0 0 30px rgba(214, 215, 216, 0.4);
+    /* box-shadow: 0 0 30px rgba(214, 215, 216, 0.4); */
     padding: 30px;
 }
 
