--- a/landingPageAssets/css/style.css
+++ b/landingPageAssets/css/style.css
@@ -1014,7 +1014,7 @@ section {
 
 .testimonials {
     padding: 80px 0;
-    background: url("../img/testimonials-bg.jpg") no-repeat;
+    background: url("../img/pic\ 2.jpeg") no-repeat;
     background-position: center center;
     background-size: cover;
     position: relative;
