--- a/landingPageAssets/css/style.css
+++ b/landingPageAssets/css/style.css
@@ -951,9 +951,39 @@ section {
 .services .icon-box {
     text-align: center;
     border: 1px solid #e2eefd;
-    padding: 80px 20px;
+    padding: 50px 20px;
     transition: all ease-in-out 0.3s;
-    background: #fff;
+    background: #f7f7f7;
+    border-radius: 1rem;
+}
+
+.services .icon-box-below {
+    text-align: center;
+    border: 1px solid #e2eefd;
+    padding: 20px;
+    transition: all ease-in-out 0.3s;
+    background: #f7f7f7;
+    border-radius: 1rem;
+}
+
+.services .icon-box-below .icon {
+    margin: 0 auto;
+    width: 30px;
+    height: 30px;
+    background: #f1f6fe;
+    border-radius: 1rem;
+    border: 1px solid #deebfd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    transition: ease-in-out 0.3s;
+}
+
+.services .icon-box-below .icon i {
+    color: #3b8af2;
+    font-size: 20px;
+    transition: ease-in-out 0.3s;
 }
 
 .services .icon-box .icon {
@@ -961,7 +991,7 @@ section {
     width: 64px;
     height: 64px;
     background: #f1f6fe;
-    border-radius: 4px;
+    border-radius: 1rem;
     border: 1px solid #deebfd;
     display: flex;
     align-items: center;
