--- a/generalDashboard/assets/css/style.css
+++ b/generalDashboard/assets/css/style.css
@@ -245,6 +245,7 @@ h6 {
     border-radius: 5px;
     box-shadow: 0px 0 30px rgba(1, 41, 112, 0.1);
     overflow: hidden;
+    background-color: #000;
 }
 
 .card-header,
@@ -259,7 +260,7 @@ h6 {
     padding: 20px 0 15px 0;
     font-size: 18px;
     font-weight: 500;
-    color: #012970;
+    color: rgb(214, 214, 214);
     font-family: "Poppins", sans-serif;
 }
 
@@ -311,7 +312,7 @@ h6 {
 }
 
 .accordion-button:not(.collapsed) {
-    color: #012970;
+    color: rgb(214, 214, 214);
     background-color: #f6f9ff;
 }
 
@@ -462,7 +463,7 @@ h6 {
 .header .search-form input {
     border: 0;
     font-size: 14px;
-    color: #012970;
+    color: rgb(214, 214, 214);
     border: 1px solid rgba(1, 41, 112, 0.2);
     padding: 7px 38px 7px 8px;
     border-radius: 3px;
@@ -485,7 +486,7 @@ h6 {
 }
 
 .header .search-form button i {
-    color: #012970;
+    color: rgb(214, 214, 214);
 }
 
 
@@ -637,6 +638,7 @@ h6 {
     scrollbar-width: thin;
     scrollbar-color: #aab7cf transparent;
     box-shadow: 0px 0px 20px rgba(1, 41, 112, 0.1);
+    background-color: #000;
 }
 
 @media (max-width: 1199px) {
@@ -758,7 +760,7 @@ h6 {
     align-items: center;
     font-size: 14px;
     font-weight: 600;
-    color: #012970;
+    color: rgb(214, 214, 214);
     transition: 0.3;
     padding: 10px 0 10px 40px;
     transition: 0.3s;
@@ -830,11 +832,12 @@ h6 {
 
 .dashboard .info-card {
     padding-bottom: 10px;
+    background-color: #000;
 }
 
 .dashboard .info-card h6 {
     font-size: 28px;
-    color: #012970;
+    color: rgb(214, 214, 214);
     font-weight: 700;
     margin: 0;
     padding: 0;
@@ -934,7 +937,7 @@ h6 {
 }
 
 .dashboard .news h4 a {
-    color: #012970;
+    color: rgb(214, 214, 214);
     transition: 0.3s;
 }
 
@@ -1012,7 +1015,7 @@ h6 {
     background-color: #fff;
     border-radius: 0.25rem;
     text-align: center;
-    color: #012970;
+    color: rgb(214, 214, 214);
     padding: 15px 0;
 }
 
@@ -1063,7 +1066,7 @@ h6 {
 }
 
 .profile .profile-card .social-links a:hover {
-    color: #012970;
+    color: rgb(214, 214, 214);
 }
 
 .profile .profile-overview .row {
@@ -1072,7 +1075,7 @@ h6 {
 }
 
 .profile .profile-overview .card-title {
-    color: #012970;
+    color: rgb(214, 214, 214);
 }
 
 .profile .profile-overview .label {
@@ -1121,7 +1124,7 @@ h6 {
 
 .contact .info-box h3 {
     font-size: 20px;
-    color: #012970;
+    color: rgb(214, 214, 214);
     font-weight: 700;
     margin: 20px 0 10px 0;
 }
@@ -1246,7 +1249,7 @@ h6 {
 .error-404 h2 {
     font-size: 24px;
     font-weight: 700;
-    color: #012970;
+    color: rgb(214, 214, 214);
     margin-bottom: 30px;
 }
 
@@ -1280,12 +1283,12 @@ h6 {
 
 .footer .copyright {
     text-align: center;
-    color: #012970;
+    color: rgb(214, 214, 214);
 }
 
 .footer .credits {
     padding-top: 5px;
     text-align: center;
     font-size: 13px;
-    color: #012970;
+    color: rgb(214, 214, 214);
 }
