--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,7 +233,7 @@ h6 {
 #hero {
     width: 100%;
     height: 100vh;
-    background: url("../img/hero-bg.jpg") top center;
+    /* background: url("") top center; */
     background-size: cover;
 }
 
