--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,32 @@ h6 {
     font-family: "Raleway", sans-serif;
 }
 
+.avartar-picker {
+    margin-top: 20px;
+}
+
+.avartar-picker .inputfile {
+    display: none;
+}
+
+.avartar-picker label {
+    display: block;
+    cursor: pointer;
+    display: inline-block;
+    color: #333;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 800;
+}
+
+.avartar-picker label:hover {
+    color: #666;
+}
+
+.avartar-picker label i {
+    margin-right: 3px;
+}
+
 
 /*--------------------------------------------------------------
 # Back to top button
