--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,7 +259,7 @@ h6 {
 #hero {
     width: 100%;
     height: 100vh;
-    /* background: url("../../landingPageAssets/img/pic\ 6.jpeg") top center; */
+    background: url("../../images/Rectangle\ 3.png") top center;
     background-size: cover;
 }
 
