--- a/landingPageAssets/css/style.css
+++ b/landingPageAssets/css/style.css
@@ -477,6 +477,7 @@ h6 {
     width: 100%;
     height: 75vh;
     background: url("../img/hero-bg.jpg") top left;
+    opacity: 0.4;
     background-size: cover;
     position: relative;
 }
