--- a/landingPageAssets/css/style.css
+++ b/landingPageAssets/css/style.css
@@ -476,7 +476,7 @@ h6 {
 #hero {
     width: 100%;
     height: 75vh;
-    background: url("../img/hero-bg.jpg") top left;
+    background: url("../img/ai-bg2.webp") top left;
     opacity: 0.4;
     background-size: cover;
     position: relative;
@@ -484,7 +484,7 @@ h6 {
 
 #hero:before {
     content: "";
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(28, 28, 28, 0.6);
     position: absolute;
     bottom: 0;
     top: 0;
