Feat: course section on landing page

--- a/landingPageAssets/css/style.css
+++ b/landingPageAssets/css/style.css
@@ -623,6 +623,24 @@ section {
     border-radius: 50px;
 }
 
+.section-course-button {
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+.section-course-button h2 a {
+    font-size: 13px;
+    letter-spacing: 1px;
+    font-weight: 700;
+    padding: 8px 20px;
+    margin: 0;
+    background: #00ac4a;
+    color: #fff;
+    display: inline-block;
+    text-transform: uppercase;
+    border-radius: 50px;
+}
+
 .section-title h3 {
     margin: 15px 0 0 0;
     font-size: 32px;
