--- a/blogs/css/templatemo-xtra-blog.css
+++ b/blogs/css/templatemo-xtra-blog.css
@@ -47,22 +47,16 @@ hr {
 }
 
 .tm-header-wrapper {
-    overflow-y: scroll;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
     padding: 30px;
     width: 100%;
     height: 100%;
 }
 
-.tm-header-wrapper::-webkit-scrollbar {
-    width: 0;
-    height: 0;
-}
-
-.tm-site-header {
-    margin-top: 50px;
-    margin-bottom: 115px;
+.tm-site-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 .tm-site-logo {
