Feat: course category secton

--- a/landingPageAssets/css/style.css
+++ b/landingPageAssets/css/style.css
@@ -628,7 +628,7 @@ section {
     padding-bottom: 30px;
 }
 
-.section-course-button h2 a {
+.section-course-button h2 {
     font-size: 13px;
     letter-spacing: 1px;
     font-weight: 700;
