--- a/generalDashboard/assets/css/style.css
+++ b/generalDashboard/assets/css/style.css
@@ -331,7 +331,7 @@ h6 {
 
 .accordion-flush .accordion-body {
     padding: 0 0 15px 0;
-    color: #3e4f6f;
+    color: #c2c2c2;
     font-size: 15px;
 }
 
