--- a/landingPageAssets/css/style.css
+++ b/landingPageAssets/css/style.css
@@ -476,7 +476,7 @@ h6 {
 #hero {
     width: 100%;
     height: 75vh;
-    background: url("../img/ai-bg2.webp") top left;
+    background: url("../../landingPageAssets/img/gamma-bg.jpg") top left;
     opacity: 0.8;
     background-size: cover;
     position: relative;
