--- a/landingPageAssets/css/style.css
+++ b/landingPageAssets/css/style.css
@@ -475,7 +475,7 @@ h6 {
 
 #hero {
     width: 100%;
-    height: 75vh;
+    height: 80vh;
     background: url("../../landingPageAssets/img/gamma-bg.jpg") top left;
     opacity: 0.8;
     background-size: cover;
@@ -569,6 +569,7 @@ h6 {
 @media (max-width: 768px) {
     #hero {
         height: 100vh;
+        background: url("../../landingPageAssets/img/Gamma\ bg-02-02.png") top left;
     }
     #hero h1 {
         font-size: 28px;
