--- a/landingPageAssets/css/style.css
+++ b/landingPageAssets/css/style.css
@@ -477,9 +477,7 @@ h6 {
     width: 100%;
     height: 80vh;
     /* background: url("../../landingPageAssets/img/gamma-bg.jpg") top left; */
-    opacity: 0.8;
-    background-size: cover;
-    position: relative;
+    /* opacity: 0.8; */
 }
 
 #hero:before {
