--- a/landingPageAssets/css/style.css
+++ b/landingPageAssets/css/style.css
@@ -728,7 +728,7 @@ section {
     background: #fff;
     box-shadow: 0 0 29px 0 rgba(68, 88, 144, 0.12);
     transition: all 0.3s ease-in-out;
-    border-radius: 8px;
+    border-radius: 20px;
     z-index: 1;
 }
 
@@ -744,11 +744,12 @@ section {
     z-index: -1;
 }
 
-.featured-services .icon-box:hover::before {
+
+/* .featured-services .icon-box:hover::before {
     background: #149DDD;
     top: 0;
     border-radius: 0px;
-}
+} */
 
 .featured-services .icon {
     margin-bottom: 15px;
