--- a/landingPageAssets/css/style.css
+++ b/landingPageAssets/css/style.css
@@ -721,6 +721,74 @@ section {
 # Featured Services
 --------------------------------------------------------------*/
 
+.Timeline {
+    display: flex;
+    align-items: center;
+    height: 500px;
+}
+
+.event1,
+.event2,
+.event3 {
+    position: relative;
+}
+
+.event1Bubble {
+    position: absolute;
+    background-color: rgba(158, 158, 158, 0.1);
+    width: 16rem;
+    height: 16rem;
+    top: -16.2rem;
+    left: -15px;
+    border-radius: 20px;
+    box-shadow: inset 0 0 5px rgba(158, 158, 158, 0.64)
+}
+
+.event1Bubble:after,
+.event1Bubble:before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-color: transparent;
+    border-bottom: 0;
+}
+
+.event1Bubble:before {
+    bottom: -10px;
+    left: 13px;
+    border-top-color: rgba(222, 222, 222, 0.66);
+    border-width: 12px;
+}
+
+.event1Bubble:after {
+    bottom: -8px;
+    left: 13px;
+    border-top-color: #F6F6F6;
+    border-width: 12px;
+}
+
+.time {
+    position: absolute;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 200px;
+    font-size: 16px;
+    margin-top: -3px;
+    margin-left: -5px;
+    color: #9E9E9E;
+}
+
+.futureGray {
+    filter: grayscale(1);
+    -webkit-filter: grayscale(1);
+}
+
+.futureOpacity {
+    -webkit-filter: opacity(.3);
+    filter: opacity(.3);
+}
+
 .featured-services .icon-box {
     padding: 30px;
     position: relative;
