--- a/landingPageAssets/css/style.css
+++ b/landingPageAssets/css/style.css
@@ -476,7 +476,7 @@ h6 {
 #hero {
     width: 100%;
     height: 80vh;
-    /* background: url("../../landingPageAssets/img/gamma-bg.jpg") top left; */
+    background: url("../../landingPageAssets/img/gamma-bg.jpg") top left;
     opacity: 0.8;
 }
 
